added basic info

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cleanfolio",
+  "name": "resume",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://harshal-sawant.github.io/resume/",
@@ -18,8 +18,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts --openssl-legacy-provider test",
     "eject": "react-scripts --openssl-legacy-provider eject",
     "lint": "eslint .",
